--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-Django~=4.1.1
+asgiref==3.5.2
+Django==4.1.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+python-dotenv==0.21.0
+sqlparse==0.4.2
+tzdata==2022.2
